smtp details changed

--- a/.env.local
+++ b/.env.local
@@ -1,10 +1,10 @@
 GOOGLE_SHEET_ID=1uSdXF9c0qD3_E7iU-wt29fjATiRSs032kagykZ802P4 
 GOOGLE_API_KEY=AIzaSyCrZLUr7bZ33NwGJIzG1LTSrG2Q0Oh7SY4
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_SECURE=true
+SMTP_HOST=smtp-relay.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
 SMTP_USER="info.orbit2021@gmail.com"
 SMTP_PASS="ukmk swft twfy tmmi"
 
-RECIPIENTS="sujoydebnath89@gmail.com"
+RECIPIENTS="info@oespty.com"
