--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,6 @@
+# GOOGLE_SHEET_ID=1uSdXF9c0qD3_E7iU-wt29fjATiRSs032kagykZ802P4 
+# GOOGLE_API_KEY=AIzaSyCrZLUr7bZ33NwGJIzG1LTSrG2Q0Oh7SY4
+
 GOOGLE_SHEET_ID=1uSdXF9c0qD3_E7iU-wt29fjATiRSs032kagykZ802P4 
 GOOGLE_API_KEY=AIzaSyCrZLUr7bZ33NwGJIzG1LTSrG2Q0Oh7SY4
 
